--- a/quick_start_kql_loganalytics_sentinel.ipynb
+++ b/quick_start_kql_loganalytics_sentinel.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# This is a template to facilitate people to access public and private Azure LogAnalytics (Azure Sentinel), to perform queries using Kusto Query Language (KQL), and further process the data using Python libraries (e.g. pandas and numpy). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 align='center'>=========================================================</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Instaling KQLmagic libraries"
    ]
   },
