--- a/quick_start_kql_loganalytics_sentinel.ipynb
+++ b/quick_start_kql_loganalytics_sentinel.ipynb
@@ -580,7 +580,7 @@
    "metadata": {},
    "source": [
     "## Querying the data\n",
-    "There is an good training material at: https://github.com/jjsantanna/azure_sentinel_learn_kql_lab/blob/master/azure_sentinel_learn_kql_lab.ipynb"
+    "In case you want to know how to perform KQL queries there is a good training material [here!](https://github.com/jjsantanna/azure_sentinel_learn_kql_lab/blob/master/azure_sentinel_learn_kql_lab.ipynb)"
    ]
   },
   {
