--- a/quick_start_kql_loganalytics_sentinel.ipynb
+++ b/quick_start_kql_loganalytics_sentinel.ipynb
@@ -707,8 +707,7 @@
     }
    ],
    "source": [
-    "%%kql SigninLogs\n",
-    "|limit 10"
+    "%kql search * | summarize count() by $table"
    ]
   },
   {
